Projet GL/test/src/test/deca/syntax/invalid/missing_semi.deca
// Description:
//    print sans ;
//
// Resultats:
//     missing ';' at '}'
//
// Historique:
//    cree le 10/01/2023

{
    print(a)
}
